--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 requests~=2.29.0
 websockets~=10.4
-colorama~=0.4.6
-mcstatus~=10.0.3
-plotly~=5.14.1
-peewee~=3.16.2
-pillow~=9.5.0
+colorama~=0.4.
 aiohttp~=3.8.4
 brotli~=1.0.9
 minestat~=2.6.1
-bs4~=0.0.1
-beautifulsoup4~=4.12.2
-rcon~=2.1.1
+markupsafe~=2.1.2
+werkzeug~=2.3.4
+click~=8.1.3
+blinker~=1.6.2
+jinja2~=3.1.2
+itsdangerous~=2.1.2
+pygithub~=1.55
