--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-requests~=2.29.0
-websockets~=10.4
+requests==2.31.0
+websockets==11.0.3
 colorama~=0.4.6
 mcstatus~=10.0.3
-plotly~=5.14.1
+plotly==5.15.0
 peewee~=3.16.2
 pillow~=9.5.0
 aiohttp~=3.8.4
@@ -10,4 +10,4 @@ brotli~=1.0.9
 minestat~=2.6.1
 bs4~=0.0.1
 beautifulsoup4~=4.12.2
-rcon~=2.1.1
+rcon==2.3.9
