--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,10 @@ blinker~=1.6.2
 jinja2~=3.1.2
 itsdangerous~=2.1.2
 pygithub~=1.55
+pillow~=9.5.0
+peewee~=3.16.2
+bs4~=0.0.1
+beautifulsoup4~=4.12.2
+rcon~=2.1.1
+jieba~=0.42.1
+art~=5.9
